# mbzirc_task2

mbzirc_task2_control/: CMakeLists.txt  package.xml
mbzirc_task2_control/euslisp/: align-with-panel-util.l  align-with-panel.l  approach-panel-util.l  approach-panel.l  catch-wrench-util-no-dynamixel.l  catch-wrench-util.l  catch-wrench.l  laser-align-with-panel.l  main-with-far-range.l  main.l  move-base-util.l  remove-shadow.l  running-arena-side-motion.l  running-arena.l  start-task.l
mbzirc_task2_network/launch/: aero_throttle.launch  aero_udp.launch
mbzirc_task2_perception/: CMakeLists.txt  README.md  package.xml
mbzirc_task2_perception/cfg/: InsigmaNormalizer.cfg  MeanshiftFiltering.cfg  TemplateMatchDetector.cfg
mbzirc_task2_perception/include/mbzirc_task2_perception/: bounding_box_publisher.h  extract_panel_cluster.h  image_clipper.h  image_manual_clipper.h  insigma_normalizer.h  luminance_homogenizer.h  meanshift_filtering.h  panel_3d_projector.h  roi_generator.h  template_match_detector.h  valve_3d_projector.h  wrench_3d_projector.h
mbzirc_task2_perception/launch/: get_roi_on_panel.launch  handeye_image_processing.launch  long_range_panel_finder.launch  middle_range_panel_finder.launch  multi_resolution_zed.launch  panel_image_processing.launch  shaft_image_processing.launch  short_range_panel_finder.launch
mbzirc_task2_perception/launch/demo/: generate_template.launch  template_match.launch
mbzirc_task2_perception/launch/deprecated/: wrench_detector.launch
mbzirc_task2_perception/launch/rosbag/: aeroarm_rosbag_play.launch  aeroarm_rosbag_record.launch  hrp2018_rosbag_play.launch  hrp2018_rosbag_record.launch  zed_play.launch  zed_record.launch  zed_tf.launch
mbzirc_task2_perception/msg/: AreaArrayStamped.msg
mbzirc_task2_perception/plugins/nodelet/: libmbzirc_task2_perception.xml
mbzirc_task2_perception/scripts/: start-image-processing.sh
mbzirc_task2_perception/src/: bounding_box_publisher.cpp  extract_panel_cluster.cpp  image_clipper.cpp  image_manual_clipper.cpp  insigma_normalizer.cpp  luminance_homogenizer.cpp  meanshift_filtering.cpp  panel_3d_projector.cpp  roi_generator.cpp  template_match_detector.cpp  valve_3d_projector.cpp  wrench_3d_projector.cpp
mbzirc_task2_utils/rviz/: aero-perception-manual.rviz  aero-perception.rviz
mbzirc_task2_utils/scripts/: start-remotepc-processing.sh
netusbcam/: CMakeLists.txt  image_throttle_nodelets.xml  package.xml
netusbcam/cfg/: param_KS4133CU_101510501.yaml
netusbcam/launch/: netusbcam.launch
netusbcam/src/: netusbtest.cpp
valve_task/euslisp/: .#task2_state_machine.l  fit-wrench-to-shaft-aero.l  hrp2g-ps3joy-mbzirc-teleop-no-dynamixel.l  hrp2g-ps3joy-mbzirc-teleop.l  laser-panel-detector.l  laser-panel-detector.l.bak  start-roseus-hrp2g-mbzirc.l  task2_state_machine.l  valve-task-params.l
valve_task/scripts/: start_roseus_aero_mbzirc_byobu.sh  start_roseus_hrp2g_mbzirc.sh
