<package>
  <name>mbzirc_task2_perception</name>
  <version>0.0.0</version>
  <description>
  mbzirc_task2_perception
  </description>

  <maintainer email="mizohana@jsk.t.u-tokyo.ac.jp">Hiroto Mizohana</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jsk_perception</build_depend>
  <build_depend>jsk_pcl_ros</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>manip_test</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libcmt</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>jsk_perception</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>opencv_apps</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>libcmt</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libmbzirc_task2_perception.xml" />
  </export>

</package>
